frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: sourikg/civi-frontend:latest
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 250m
            memory: 1Gi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 3000
  selector:
    app: frontend
