ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /?(.*)   
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - pathType: Prefix
        path: /api/?(.*)   
        backend:
          service:
            name: api
            port:
              number: 5000
